--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+
+/*フォントここまで*/
+
 *{
+   font-family: 'Noto Sans JP', sans-serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
@@ -19,22 +27,30 @@
 }
 .headerTop{
    display: flex;
-   justify-content: space-around;
+   padding-right: 45px;
+   padding-left: 55px;
+   justify-content: space-between;
 }
 .headerTop h1{
+   font-family: 'Sawarabi Gothic', sans-serif;
    padding: 6px;
-   margin: 5px;
    font-size: 26px;
    color: #fff;
+   margin: 10px;
+}
+.headerTop a{
+   color: #fff;
+   text-decoration: none;
 }
 .headerNav li{
+   margin: 10px;
    list-style-type: none;
    display: inline-block;
    padding: 10px;
-   margin: 10px;
 }
 .headerNav a{
    text-decoration: none;
+   font-family: 'M PLUS Rounded 1c', sans-serif;
    color: #fff;
 }
 .headerMiddle{
@@ -42,8 +58,10 @@
 }
 .headerMiddle h1{
    padding-top: 250px;
-   font-size: 45px;
+   font-size: 55px;
    color: #fff;
+   font-family: 'Noto Sans JP', sans-serif;
+
 }
 .btn{
    text-decoration: none;
@@ -82,6 +100,8 @@ article{
 }
 article h1{
    font-size: 60px;
+   font-family: 'Noto Sans JP', sans-serif;
+
 }
 article p{
    font-size: 16px;
@@ -119,6 +139,7 @@ aside img{
    padding-left: 40px;
 }
 .gameQa h1{
+   font-family: 'Noto Sans JP', sans-serif;
    font-size: 60px;
 }
 .gameQa p{
@@ -142,6 +163,7 @@ aside img{
    color: #fff;
 }
 .gameQa2 h1{
+   font-family: 'Noto Sans JP', sans-serif;
    font-size: 60px;
 }
 .gameQa2 p{
@@ -163,6 +185,7 @@ aside img{
    color: #FFF;
 }
 .gameQa3 h1{
+   font-family: 'Noto Sans JP', sans-serif;
    font-size: 60px;
 }
 
@@ -181,6 +204,7 @@ aside img{
    text-align: center;
 }
 .memberContents h1{
+   font-family: 'Noto Sans JP', sans-serif;
    padding-top: 100px;
    font-size: 70px;
 }
