--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
 /*フォントここまで*/
 
@@ -27,6 +30,8 @@
 }
 .headerTop{
    display: flex;
+   position: fixed;
+   width: 100%;
    padding-right: 45px;
    padding-left: 55px;
    justify-content: space-between;
@@ -38,9 +43,14 @@
    color: #fff;
    margin: 10px;
 }
+
 .headerTop a{
    color: #fff;
    text-decoration: none;
+}
+.headerTop a:hover{
+   color: rosybrown;
+   transition: 0.9s;
 }
 .headerNav li{
    margin: 10px;
@@ -53,11 +63,15 @@
    font-family: 'M PLUS Rounded 1c', sans-serif;
    color: #fff;
 }
+.headerNav a:hover{
+   color: rosybrown;
+   transition: 0.9s;
+}
 .headerMiddle{
    text-align: center;
 }
 .headerMiddle h1{
-   padding-top: 250px;
+   padding-top: 24%;
    font-size: 55px;
    color: #fff;
    font-family: 'Noto Sans JP', sans-serif;
@@ -70,7 +84,7 @@
    border: 2px solid #fff;
    border-radius: 30px;
    transition: 0.9s;
-   padding: 10px 15px;
+   padding: 12px 15px;
    margin-top: 20px;
 }
 .btn:hover{
@@ -116,7 +130,8 @@ aside p{
    color: #000;
    text-align: left;
 }
-aside img{
+.asideGp{
+   transform: translateY(-15px);
    width: 500px;
 }
 /*メインコンテンツここまで*/
@@ -193,60 +208,64 @@ aside img{
 
 /*メンバーここから*/
 
-.memberContents{
+.memberBb{
+   background-color:rgba(0, 0, 0,0.5);
+   height: 40vh;
+}
+.member{
    background-image: url("images/oranges-5010270_1920.jpg");
    background-size: cover;
-   height: 40vh;
    background-position: center;
+   box-shadow: 0 1px 10px rgba(0,0,0,0.2);
+   height: 40vh;
+   margin-bottom: 80px;
 }
-.memberContents h1,p{
+.mTitle{
+   color: #fff;
+   text-align: center;
+   padding-top: 130px;
+   font-size: 65px;
+   font-family: 'Noto Sans JP', sans-serif;
+}
+.mTxt{
    color: #fff;
    text-align: center;
 }
-.memberContents h1{
-   font-family: 'Noto Sans JP', sans-serif;
-   padding-top: 100px;
-   font-size: 70px;
-}
-.memberContentsBL{
-   background-color: rgba(0,0,0,0.4);
-   height: 40vh;
-}
 .memberList{
-   max-width: 800px;
+   background: #F5F5F7;
+   text-align: center;
+   width: 100%;
+   max-width: 1500px;
    margin: 0 auto;
-   margin-top: 90px;
-   margin-bottom: 80px;
-   display: flex;
-   width: 50%;
+   box-shadow: 0 0 10px silver;
+   padding: 5% 5% 5% 5%;
+   transition: 0.6s;
 }
-.memberList li{
-   list-style: none;
-   text-align: left;
+.memberList:hover{
+   transform: translateY(-10px);
 }
-.member1{
-   background: #F2F2F2;
-   width: 40%;
-   margin-right: 70px;
-   padding: 10px;
+.mlTitle{
+   font-family: 'Noto Sans JP', sans-serif;
 }
-.member1 h2{
-   font-size: 26px;
+.list{
+   display: inline-block;
+   text-align: center;
+   margin-left: 35px;
 }
-.member2{
-   background: #F2F2F2;
-   width: 40%;
-   padding: 10px;
+.list p{
+   font-size: 17px;
+   color: #000;
+   font-family: 'Noto Sans JP', sans-serif;
 }
-.member2 h2{
-   font-size: 26px;
+.list i{
+   padding: 3px;
+   margin: 3px;
 }
-#member{
-   height: 100vh;
-}
+
 /*メンバーここまで*/
 
 .footer{
+   margin-top: 70px;
    border-top: 1px solid silver;
 }
 .footer p{
