--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
    text-align: center;
 }
 .headerMiddle h1{
-   padding-top: 24%;
+   padding-top: 380px;
    font-size: 55px;
    color: #fff;
    font-family: 'Noto Sans JP', sans-serif;
